--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "angular": "^1.6.1",
-    "angular-ui-router": "^0.3.2",
     "angular-resource": "^1.6.1",
+    "angular-ui-router": "^0.3.2",
     "jquery": "^3.1.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.3",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
@@ -25,7 +27,9 @@
     "html-webpack-plugin": "^2.17.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "moment": "^2.17.1",
     "ng-annotate-loader": "^0.2.0",
+    "postcss-loader": "^1.3.1",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
